cluster/apps/emqx/sever.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  namespace: emqx
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns/is-public: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: weather-sunset
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
spec:
  rules:
  - host: &dashhost emqx-dashboard.xor86.io
    http:
      paths:
      - backend:
          service:
            name: emqx-dashboard
            port:
              name: dashboard
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - *dashhost
    secretName: emqx-dashboard-tls
